fixed thank you spacing

--- a/index.css
+++ b/index.css
@@ -168,7 +168,7 @@ input{
     background: #ECFDF5;
     color: #065F46;
     width: 85%;
-    margin: 51px auto 200px auto;
+    margin: 51px auto;
 }
 
 .thank-you-message {
